--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,15 +1,30 @@
+.login {
+    display: flex;
+    /* flex-wrap: wrap;
+    box-sizing: border-box; */
+    width: 100%;
+    height: 100%;
+}
+
+#root {
+    height: 100vh;
+}
+
 .login-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     /* align-items: center; */
-    width: 250px;
+    width: 60%;
+    padding: 2rem;
+    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12)
 }
 
-.login {
-    display: flex;
-    height: 90vh;
-    justify-content: center;
+.background-login {
+    background: url("./mariadb.jpg");
+    background-size: auto;
+    flex-grow: 0;
+    width: 100%;
 }
 
 .input-login, .boton-ingresar {
@@ -20,11 +35,15 @@
     display: flex;
     justify-content: center;
     font-family: "Roboto";
-    color: var(--primary-color);
+    color: #3f51b5;
     gap: 0.2rem;
 }
 
 #logo, .logo-container {
     font-size: 2.5rem;
     align-self: center;
+}
+
+.link {
+    padding-top: 0.5rem;
 }
