--- a/src/components/inicio/inicio.css
+++ b/src/components/inicio/inicio.css
@@ -1,60 +1,49 @@
- .inicio{
-
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    margin: 1rem 3rem 1rem 3rem;
-    border-style: solid;
-    height:500px;
-    align-items: center;
+ .inicio {
+     /* display: grid;
+     grid-template-columns: 1fr 1fr 1fr;
+     grid-template-rows: 0.6fr 1fr 1fr;
+     grid-template-areas: "musica card complex" "receta musica complex" "receta musica complex"; */
+     gap: 1rem;
+     padding: 1rem;
+     display: flex;
+     /* align-items: center; */
+     justify-content: center;
  }
 
-.inicio-container{
+ .column {
+     display: flex;
+     flex-direction: column;
+     gap: 1rem;
+ }
 
-    border-style: solid;
-    border-color: salmon;
-    display: flex;  
-    justify-content: space-around;
-    flex-direction: column;
-    height:300px;
-    width:370px;
-    
-    
-}
+ .inicio-container {
+     display: flex;
+     justify-content: space-around;
+     flex-direction: column;
+     height: 300px;
+     width: 370px
+ }
 
- 
-.ladoDerecho, .ladoIzquierdo{
-  
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-     
- 
-}
+ .ladoDerecho, .ladoIzquierdo {
+     display: flex;
+     flex-direction: row;
+     justify-content: center;
+ }
 
- 
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    
-     
-    
-}
-.salir, .descargas, .reproducciones, .miperfil {
-    border-style: solid;
-    border-color: salmon;
-    font-family: "Lobster";
-    display: flex;
-    margin:2em;
-    flex-direction: column;
-    
-}
+ .salir, .descargas, .reproducciones, .miperfil {
+     border-style: solid;
+     border-color: salmon;
+     font-family: "Lobster";
+     display: flex;
+     margin: 2em;
+     flex-direction: column;
+ }
 
-.title{
-    font-size: calc(10px + 2vmin);
-    display: flex;
-    justify-content: center;
-    background-color: blanchedalmond;
-    font-family: "Lobster";
-    font-size: 2rem;
-}
+ .title {
+     font-size: calc(10px + 2vmin);
+     display: flex;
+     justify-content: center;
+     background-color: blanchedalmond;
+     font-family: "Lobster";
+     font-size: 2rem;
+ }
