--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -6,10 +6,6 @@
     height: 100%;
 }
 
-#root {
-    height: 100vh;
-}
-
 .login-container {
     display: flex;
     flex-direction: column;
@@ -35,7 +31,7 @@
     display: flex;
     justify-content: center;
     font-family: "Roboto";
-    color: #3f51b5;
+    color: var(--primary-color);
     gap: 0.2rem;
 }
 
