--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -6,6 +6,5 @@
 
 .contenedor-principal {
     font-family: "Roboto";
-    /* background-color: blanchedalmond;
-border-color: salmon; */
+    font-size: 1.2rem;
 }
