--- a/src/components/miperfil/miperfil.css
+++ b/src/components/miperfil/miperfil.css
@@ -1,61 +1,27 @@
 .perfil {
   display: flex;
   justify-content: center;
-  flex-direction: column;
-  gap: 1rem;
   align-items: center;
-  /* border-style: solid; */
 }
 
 .perfil-container {
   display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  width: 100%;
-  max-width: 500px;
-  padding-top: 1rem;
-  box-sizing: border-box;
-}
-
-.datos-container {
-  /* display: grid;
-  grid-template-columns: 1fr 1fr; */
-  padding: 1rem 0rem 1rem 0rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.tittle {
-  font-family: "Roboto";
   justify-content: center;
+  flex-direction: column;
   align-items: center;
-  display: flex;
 }
 
-#icon-profile, .tittle {
-  font-size: 2rem;
-  color: rgba(0, 0, 0, 0.623);
+.boton, .boton-borrar {
+  align-self: center;
+  margin-bottom: 0.5rem;
+  width: 190px;
 }
 
-.button-container-perfil {
-  display: flex;
-  gap: 0.5rem;
-  align-self: flex-end;
+.boton-borrar {
+  width: 390px
 }
 
-/* ///////////////////// */
-
-.linea {
+.boton-container {
   display: flex;
-  flex-direction: column;
-}
-
-.button-container {}
-
-.boton {
-  border-style: solid;
-  display: flex;
-  margin: 2em;
-  flex-direction: column;
+  gap: 1rem;
 }
