--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -1,10 +1,16 @@
-.Button-container {
-    display: flex;
-    justify-content: flex-end;
-    position: relative;
+.containers {
+    /* display: flex;
+    margin-top: 1rem; */
 }
 
 .contenedor-principal {
     font-family: "Roboto";
     font-size: 1.2rem;
+}
+
+.Button-containers {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    margin-top: 1rem;
 }
