Se hace la nueva vista de perfil

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,11 @@ code {
   height: 100vh;
   box-sizing: border-box;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-family: inherit;
+  font-weight: 600;
+  line-height: 1.2;
+  color: inherit;
+}
