--- a/src/components/perfil/editarPerfil/editarPerfil.css
+++ b/src/components/perfil/editarPerfil/editarPerfil.css
@@ -22,3 +22,9 @@
     flex-direction: column;
     gap: 1.5rem;
 }
+
+.button-container {
+    display: flex;
+    gap: 1rem;
+    align-self: flex-end;
+}
