Fix y cambio de estilo

--- a/src/components/nav-bar/nav-bar.css
+++ b/src/components/nav-bar/nav-bar.css
@@ -1,3 +1,6 @@
-.saludo-nav {
-    font-size: 2rem;
+.saludo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
 }
